--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head>git
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UiTM</title>
 </head>
 <body>
+    <img src="logo uitm.png" alt="UiTM" width="200px" />
+    <br/>
     <h1>Universiti Teknologi MARA</h1>
+    Puncak Perdana
 </body>
 </html>
